{
    "name": "InputSystem",
    "maps": [
        {
            "name": "Boat Controls",
            "id": "236e9464-55dc-4d1c-a64c-d0128cb9447c",
            "actions": [
                {
                    "name": "ForwardInput",
                    "type": "Button",
                    "id": "abff88a0-de5d-41f7-a9a9-f9f108b88a69",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "TurnInput",
                    "type": "Button",
                    "id": "a1eebc4e-43f5-49a6-9955-f09a8eb1d822",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "CameraInput",
                    "type": "Button",
                    "id": "79003a2b-f172-44e3-9fa3-774dd8d5b541",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ShootRight",
                    "type": "Button",
                    "id": "fcb9b4aa-720b-4db2-ad20-1d74c11a84f1",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ShootLeft",
                    "type": "Button",
                    "id": "5d22eeed-d319-437c-ad62-804c06a0dc6b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "wasd input",
                    "id": "66d22ab1-1a08-490a-a2d8-1c464d06e609",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ForwardInput",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "e100d9b6-bc93-4139-900f-c9d818419a2a",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ForwardInput",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "2f3ce1d8-af54-4cec-aa5e-266c116357cc",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ForwardInput",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "arrowkey input",
                    "id": "67498e07-d1be-4235-b29e-bbbe3f0c1df8",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ForwardInput",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "475c93d0-870a-4314-bf85-76dec440e820",
                    "path": "<Keyboard>/downArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ForwardInput",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "de1ace44-b4cb-4e31-a12a-3116cfa5edba",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ForwardInput",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "wasd input",
                    "id": "768e06b6-7dd8-4d24-853a-00e6d2487214",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TurnInput",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "55805fac-bceb-4c34-8f29-25e58b8052b3",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TurnInput",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "bfc7c85b-76c0-4b6f-b6a2-29f9539a859c",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TurnInput",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "arrowkey input",
                    "id": "0a7b2b02-0043-45da-a803-712dc1d919e4",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TurnInput",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "f7001049-d233-471b-90e8-522fd5ca69cd",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TurnInput",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "839ceeae-afcb-48ca-bd87-ee4be228b632",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TurnInput",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "1D Axis",
                    "id": "c6e4e741-4e20-406b-af91-bd4d6206510c",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CameraInput",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "382e6b9b-309f-45e9-8e89-d8cab4acb702",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CameraInput",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "b6914af0-287f-4fcc-8d17-4a1d4a4c54ad",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CameraInput",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "22970c18-2598-411d-a143-0508bb152ec5",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ShootRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "059f7026-721d-4a8c-b6f4-38b0c8c52d33",
                    "path": "<Keyboard>/q",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ShootLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}